1994-04-26  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h:
	Linux has the same regex-code as hpux (maybe HP wasn't wrong...)

1994-04-01  Thomas E. Dickey  <dickey@clark.net>

	* COPYING: notice for alt.sources

	* COPYING: standardized my language

1994-03-09  dickey@software.org

	* src/dedview.c:
	corrected a place in 'showMARK()' where I clobbered the current location

1993-12-17  dickey@software.org

	* src/dedtype.c:
	adjusted call on 'markC()' to account for new variable 'mrkfile'

1993-12-16  dickey@software.org

	* src/dedview.c, src/dedring.c, src/ded.h: mrkfile-hack

1993-12-06  dickey@software.org

	* src/version.h: added 'S' sort
	optimized some of the screen refreshing

	* src/dedsort.c, src/sortset.c, src/ded.hlp, src/ded2s.c:
	added 'S' sort

1993-12-02  dickey@software.org

	* src/ftree.c: forgot to set 'showdiff' in 'uprow()'

	* src/ded.c: 'resleep()' needs a call on 'refresh()' !

1993-12-01  dickey@software.org

	* src/dedview.c: clear workspace if I adjust its size

	* src/dlog.c: moved most 'refresh()' calls under 'dlog_char()'
	This fixes a problem where repeated "+" commands would result in unnecessary
	calls to refresh the screen (during simulated scrolling)

	* src/dedtype.c: removed unnecessary 'refresh()'

	* src/ded.c: removed unnecessary 'refresh()' calls

	* src/ftree.c, src/sortset.c, src/deddoit.c, src/dedfind.c, src/dedmsgs.c, src/dedread.c, src/dedshow.c:
	removed unnecessary 'refresh()'

	* src/dedview.c: removed unnecessary 'refresh()' calls

	* src/dedwait.c: removed unnecessary 'refresh()'

1993-11-24  dickey@software.org

	* src/ded.h: defined ANSI_VARARGS for sr10.2

	* src/dedmsgs.c: try to guard against out-of-range values for 'errno'

1993-11-23  dickey@software.org

	* test/test1.cmd, test/test2.cmd: added:dedblip.c

	* src/version.h: Ifdef'd idents (to simply testing with gcc warnings)
	Ported to HP/UX.
	Simulate scrolling for up/down line commands.
	Made "^" command act as a toggle to top/bottom of screen.